gnome-shell/dialog: Fix broken layout of prompt dialog
Fixes https://github.com/nana-4/materia-theme/issues/491
Fixes https://github.com/nana-4/materia-theme/issues/512

--- a/src/gnome-shell/sass/components/dialog/_dialog.scss
+++ b/src/gnome-shell/sass/components/dialog/_dialog.scss
@@ -290,7 +290,7 @@
   }
 
   .prompt-dialog-password-entry {
-    width: 20em;
+    width: 18em;
   }
 } @else {
   .prompt-dialog {
@@ -362,7 +362,7 @@
 
 .polkit-dialog-user-layout {
   @if $version >= 3.36 {
-    text-align: inherit;
+    text-align: center;
     spacing: 8px;
     margin-bottom: 6px;
   } @else {
